fix #1604 missing margin

--- a/customize.dist/src/less2/pages/page-features.less
+++ b/customize.dist/src/less2/pages/page-features.less
@@ -112,6 +112,7 @@
     .cp-regis-user {
         @media (max-width:575px) {
             margin-top: 3em;
+            margin-bottom: 3em;
         }
     }
 }
